update with unit test, modified openapi spec, readme, added controller adivce handler
